@@ -2,6 +2,8 @@ linux (4.6.1-2) UNRELEASED; urgency=medium
 
   * bug script: Put binary package name and version in the info file so
     linux-signed can easily replace them
+  * Move merge_packages function from debian/bin/gencontrol.py to
+    gencontrol module
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 Jun 2016 19:37:55 +0100
 
@@ -72,6 +74,8 @@ linux (4.6-1~exp2) experimental; urgency=medium
   * linux-image: prerm: Ignore version of running kernel inside a container or
     chroot
   * [s390] udeb: Drop all packages, since s390 no longer has its own kernel
+  * udeb: Drop packages for modules that will later be signed; these packages
+    will be taken over by src:linux-signed
 
   [ Aurelien Jarno ]
   * [mips64{,el}] Set CPU to MIPS64 R2.
